// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/InputSearch AvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         value="valeur recherchée"
  >
  <button title="Rechercher"
          class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/InputSearch Default smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         value
  >
  <button title="Rechercher"
          disabled
          class="rounded-lg w-fit border border-solid font-bold group cursor-not-allowed !text-primary-4 !bg-white !border-white p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
      </span>
    </div>
  </button>
</div>
`;
